fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  overflow-x: hidden;
 }
 
 a {
@@ -31,6 +30,8 @@ a {
   display: grid;
   place-items: center;
   min-height: 100vh;
+  overflow-x: hidden;
+  position: relative;
 }
 
 .wrapper::before,
